fixing overflow

--- a/css/custom.css
+++ b/css/custom.css
@@ -61,6 +61,7 @@ div#headerpicturewrap
 	margin-right: auto;
 	width: 100%; 
 	height: 621px; 
+	overflow: hide;
 	z-index: 0; 
 	text-align: center;
 }
